@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libjabberdxdbfile.la
 
 libjabberdxdbfile_la_SOURCES = xdb_file.c
-libjabberdxdbfile_la_LIBADD = @LDFLAGS@
+libjabberdxdbfile_la_LIBADD = @LDFLAGS@ $(top_builddir)/jabberd/libjabberd.la
 
 INCLUDES = -I../jabberd -I../jabberd/lib
